examples/good/Minus.vv
-- A simple program demonstrating the use of minus operator
-- We check that 4 - 2 = 2

import Type ;;
import Nat ;;
import Arith ;;
import NConst ;;

one : NatT ;
one = succ zero ;;

two : NatT ;
two = succ one ;;

four : NatT ;
four = add two two ;;

main : N ;
main = (sub four two) N Z S ;;